AC_INIT([wXMPPd], 1.0, [wxmppd-bugs@w00d5t0ck.info])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/wxmppd.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile
src/Makefile])
AC_PROG_CC
AC_FUNC_MMAP
PKG_CHECK_MODULES([LIBXML2], [libxml-2.0])
PKG_CHECK_MODULES([GLIB], [glib-2.0])
LIBS="$LIBXML2_LIBS $GLIB_LIBS $LIBS"
CFLAGS="$LIBXML2_CFLAGS $GLIB_CFLAGS $CFLAGS"
AC_OUTPUT
